[package]
name = "plus-plus"
version = "0.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation for ++ and -- for Rust"
readme = "README.md"
keywords = []
categories = []
repository = ""
publish = false # You should at least look at this file before you publish

[dependencies]

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/plus-plus-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/plus-plus-rs" }
maintenance = { status = "actively-developed" }
